<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:id="@+id/btnViewMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="-200dp"
            android:layout_toStartOf="@+id/btnshow"
            android:layout_alignParentTop="true"
            android:layout_marginTop="19dp"
            android:text="Ver Mapa"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/btnshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="213dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="60dp"
            android:text="Achar localização"
            tools:ignore="HardcodedText" />

        <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnshow"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="124dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="113dp"
        android:text="Sua localização"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editFile"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="46dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="59dp"
        android:ems="10"
        android:hint="Nome do local salvo"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        tools:ignore="Autofill,HardcodedText,RtlHardcoded,RtlSymmetry,TextContrastCheck" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editFile"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="150dp"
        android:text="@string/salvar"
        tools:ignore="RelativeOverlap,RtlHardcoded" />

    <TextView
        android:id="@+id/arquivo0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSave"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="230dp"
        android:text="@string/local_salvo_1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/arquivo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/arquivo0"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="230dp"
        android:text="@string/local_salvo_2"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/arquivo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/arquivo1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="230dp"
        android:text="local_salvo_3"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/arquivo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/arquivo2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="230dp"
        android:text="local_salvo_4"
        android:textSize="20sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSave"
        android:layout_marginStart="-130dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/arquivo0"
        android:text="@string/ponto_2"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnSave"
        android:layout_alignTop="@+id/arquivo0"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-44dp"
        android:text="@string/ponto_1"
        android:textSize="20sp" />


    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="475dp"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignTop="@+id/arquivo0"
        android:layout_alignBottom="@+id/arquivo3"
        android:layout_marginStart="1dp"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="-298dp">

        <RadioButton
            android:id="@+id/localP1_0"
            android:text="@string/ponto1"
            android:layout_width="wrap_content"
            android:layout_height="110dp" />

        <RadioButton
            android:id="@+id/localP1_1"
            android:layout_width="wrap_content"
            android:layout_height="110dp" />

        <RadioButton
            android:id="@+id/localP1_2"
            android:layout_width="wrap_content"
            android:layout_height="110dp" />

        <RadioButton
            android:id="@+id/localP1_3"
            android:layout_width="wrap_content"
            android:layout_height="110dp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="499dp"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/radioGroup1"
        android:layout_alignBottom="@+id/radioGroup1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="0dp">

        <RadioButton
            android:id="@+id/localP2_0"
            android:layout_width="wrap_content"
            android:layout_height="110dp" />

        <RadioButton
            android:id="@+id/localP2_1"
            android:layout_width="wrap_content"
            android:layout_height="110dp" />

        <RadioButton
            android:id="@+id/localP2_2"
            android:layout_width="wrap_content"
            android:layout_height="110dp" />

        <RadioButton
            android:id="@+id/localP2_3"
            android:layout_width="wrap_content"
            android:layout_height="110dp" />
    </RadioGroup>


        <Button
            android:id="@+id/btnDistancia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/arquivo3"
            android:layout_marginStart="-223dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/arquivo3"
            android:text="Calcular distância"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/distancia"
            android:layout_width="290dp"
            android:layout_height="53dp"
            android:layout_below="@+id/btnDistancia"
            android:layout_alignStart="@+id/btnDistancia"
            android:layout_marginStart="9dp"
            android:layout_marginTop="10dp"
            android:text="@string/dist_ncia"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/ponto1"
            android:layout_width="129dp"
            android:layout_height="60dp"
            android:layout_below="@+id/arquivo3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_toStartOf="@+id/radioGroup1" />

        <CheckBox
            android:id="@+id/ponto2"
            android:layout_width="129dp"
            android:layout_height="60dp"
            android:layout_below="@+id/ponto1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:layout_toStartOf="@+id/radioGroup1" />
        <CheckBox
            android:id="@+id/ponto3"
            android:layout_width="129dp"
            android:layout_height="60dp"
            android:layout_below="@+id/ponto2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:layout_toStartOf="@+id/radioGroup1" />
        <CheckBox
            android:id="@+id/ponto4"
            android:layout_width="129dp"
            android:layout_height="60dp"
            android:layout_below="@+id/ponto3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:layout_toStartOf="@+id/radioGroup1" />

        <Button
            android:id="@+id/btnarea"
            android:text="@string/calcular_rea"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ponto4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_toStartOf="@+id/radioGroup1" />

        <Button
            android:id="@+id/btnMapPoligono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnarea"
            android:layout_alignParentStart="true"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/ver_no_mapa" />

        <TextView
            android:id="@+id/area"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/area"
            android:textSize="15sp"
            android:layout_below="@+id/btnMapPoligono"
            android:layout_alignStart="@+id/btnarea"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="46dp"
            android:layout_toStartOf="@+id/distancia" />


    </RelativeLayout>

</androidx.core.widget.NestedScrollView>